tests/Fase2-Semantic/error/t21-declaring_a_not_basic_type_param.ctds
class main {
	integer x;
	

	integer add( int b){
		x = x+b;
		return x;
	}

	void main(){
		x=0;
		add(2);
	}
	
}
